# sg

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  README.adoc
code/core/math/: Cargo.toml
code/core/math/src/: lib.rs  prelude.rs  screen.rs
code/core/os/: Cargo.toml
code/core/os/src/: context.rs  event_sys.rs  input_sys.rs  lib.rs  prelude.rs  screen_ext.rs  window.rs
code/core/util/: Cargo.toml
code/core/util/src/: idx_allocator.rs  idx_assigner.rs  image.rs  lib.rs  sampler.rs  timing.rs
code/core/vk/: Cargo.toml
code/core/vk/src/: entry.rs  instance.rs  lib.rs  util.rs
code/core/vkw/: Cargo.toml
code/core/vkw/src/: allocator.rs  command_buffer.rs  command_pool.rs  descriptor_set.rs  device.rs  entry.rs  framebuffer.rs  graphics_pipeline.rs  instance.rs  lib.rs  prelude.rs  presenter.rs  push_constant.rs  render.rs  render_pass.rs  renderer.rs  shader.rs  surface_change_handler.rs  sync.rs  timeout.rs  util.rs  version.rs
code/core/vkw/src/device/: descriptor_indexing.rs  mod.rs  swapchain_extension.rs
code/core/vkw/src/image/: format.rs  layout_transition.rs  mod.rs  sampler.rs  texture.rs  texture_array.rs  view.rs
code/core/vkw/src/instance/: debug_report_extension.rs  mod.rs  surface_extension.rs  validation_layer.rs
code/game/client/: Cargo.toml
code/game/client/src/: game.rs  game_debug.rs  game_def.rs  input.rs  main.rs  metrics.rs  timing.rs
code/game/gfx/: Cargo.toml  build.rs
code/game/gfx/src/: camera.rs  lib.rs  texture_def.rs  triangle.frag.glsl  triangle.vert.glsl  triangle_renderer.rs
code/game/gfx/src/grid_renderer/: grid.frag.glsl  grid.vert.glsl  mod.rs
code/game/sim/: Cargo.toml
code/game/sim/src/: components.rs  legion_sim.rs  lib.rs  prelude.rs
