cargo-features = ["named-profiles", "profile-overrides"]

[workspace]
members = [
  "code/game/sim",
  "code/game/gfx",
  "code/game/client",
  "code/core/vkw",
  "code/core/math",
  "code/core/os",
  "code/core/util",
]

[patch.crates-io]
legion = { git = "https://github.com/TomGillen/legion.git", branch = "master" }
#legion = { git = "https://github.com/Veykril/legion.git", branch = "typed_indices" }

# Development (builtin & default) profile: debug assertions + fastest code generation.
[profile.dev]
opt-level = 2
overflow-checks = true
debug-assertions = true
panic = "abort"
debug = false
codegen-units = 8
lto = false
incremental = true
# Fully optimize all dependencies, but not our own crates.
[profile.dev.package."*"]
opt-level = 3
[profile.dev.package."sim"]
opt-level = 2
[profile.dev.package."gfx"]
opt-level = 2
[profile.dev.package."client"]
opt-level = 2
[profile.dev.package."vkw"]
opt-level = 2
[profile.dev.package."math"]
opt-level = 2
[profile.dev.package."os"]
opt-level = 2
[profile.dev.package."util"]
opt-level = 2

# Release (builtin) profile: fastest runtime.
[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
lto = true
debug = false

# Debugging (custom) profile (cannot be called debug): dev + debugging symbols.
[profile.dbg]
inherits = 'dev'
debug = true
