[package]
name = "vkw"
description = "Lightweight wrapper around ash Vulkan bindings"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
util = {path = "../util"}
ash = "0.29"
raw-window-handle = "0.3"
byte-strings = "0.1"
thiserror = "1.0"
log = "0.4"
