[package]
name = "vkw"
description = "Lightweight (still very unsafe) wrapper around ash Vulkan bindings, currently assuming a simple (2D) graphics rendering pipeline"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
util = {path = "../util"}
ash = "0.29"
vk-mem = "0.2"
raw-window-handle = "0.3"
byte-strings = "0.1"
thiserror = "1.0"
log = "0.4"
