[package]
name = "client"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
sim = {path = "../sim"}
gfx = {path = "../gfx"}
vkw = {path = "../../core/vkw"}
os = {path = "../../core/os"}
math = {path = "../../core/math"}
util = {path = "../../core/util"}
ash = "0.29"
winit = "0.20"
ultraviolet = "0.4"
log = "0.4"
simple_logger = "1.3"
anyhow = "1.0"
