[package]
name = "client"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
sim = {path = "../sim"}
gfx = {path = "../gfx"}
vkw = {path = "../../core/vkw"}
os = {path = "../../core/os"}
math = {path = "../../core/math"}
util = {path = "../../core/util"}
ash = "0.29"
winit = "0.20"
legion = "0.2"
ultraviolet = "0.4"
rand = "0.7"
rand_pcg = "0.2"
log = "0.4"
simple_logger = "1.3"
anyhow = "1.0"
metrics-core = "0.5"
metrics-runtime = {version = "0.13", features = []}
metrics-observer-yaml = "0.1"
