[package]
name = "gfx"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
vkw = {path = "../../core/vkw"}
util = {path = "../../core/util"}
ash = "0.29"
vk-mem = "0.2"
ultraviolet = "0.4"
raw-window-handle = "0.3"
byte-strings = "0.1"
anyhow = "1.0"
log = "0.4"

[build-dependencies]
shaderc = "0.6"
